<?xml version="1.0"?>
<package>
  <name>spatial_db_msgs</name>
  <version>0.1.0</version>
  <description>Various Message Types for the SEMAP project.</description>
  <author email="hdeeken@uos.de">Henning Deeken</author>
  <maintainer email="hdeeken@uos.de">Henning Deeken</maintainer>

  <url type="website">http://ros.org/wiki/spatial_db_msgs</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>mesh_msgs</build_depend>
  <run_depend>mesh_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
